syntax = "proto3";

package pb;

import "barber/barber.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarbersRequest{
    string id = 1;
    string barber_shop_id = 2;
}

message GetBarbersResponse {
    BarberDetail barber_detail = 1;
}